@@ -1,10 +1,10 @@
 \name{BFBayesFactor-class}
-\alias{[,BFBayesFactor,index,missing,missing-method}
-\alias{[,BFBayesFactorTop,index,missing,missing-method}
 \alias{/,BFBayesFactor,BFBayesFactor-method}
 \alias{/,numeric,BFBayesFactor-method}
 \alias{BFBayesFactor-class}
 \alias{BFBayesFactorTop-class}
+\alias{[,BFBayesFactor,index,missing,missing-method}
+\alias{[,BFBayesFactorTop,index,missing,missing-method}
 \alias{is.na,BFBayesFactor-method}
 \alias{t,BFBayesFactor-method}
 \alias{which.max,BFBayesFactor-method}
